adjusted book details spacing and ensured book is stationary despite description length

--- a/app/books/books.scss
+++ b/app/books/books.scss
@@ -22,7 +22,6 @@
   }
 
   #books-index {
-    border: 1px solid pink;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,15 +35,16 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: calc(100% - 400px);
+    width: calc(100% - 470px);
     min-width: 600px;
-    margin: 50px;
+    margin: 50px 50px 50px 120px;
 
     .cover {
       margin-right: 60px;
     }
 
     .text {
+      width: -webkit-fill-available;
       max-width: 600px;
       min-width: 300px;
       max-height: 500px;
@@ -58,13 +58,7 @@
 
       /* width */
       &::-webkit-scrollbar {
-        background: pink;
         width: 5px;
-      }
-
-      /* Track */
-      &::-webkit-scrollbar-track {
-        background: #f1f1f1;
       }
 
       /* Handle */
